# gba-rtx

./: .gitignore  Cargo.toml  INVSQRT_LUT.txt  LICENSE  LICENSE.md  Makefile  README.md  RECIP_LUT.txt  SQRT_LUT.txt  gba_new.ld  gbartx.gba  make.bat  objdump.txt  rom.map  rust-toolchain.toml
.cargo/: config.toml
resources/: text.aseprite
resources/NEScentricities/: LICENSE  generate_font_module.py
resources/Pixelara/: README  generate_font_module.py  pixelara.rs
resources/font/: LICENSE  NEScentricities.json  NEScentricities.rs  README.md  generate_font_module.py  nescentricities.rs
resources/images/: generate_font_module.py  images.rs
resources/music/: README
roms/: gba-rt-10-spacing.gba  gba-rt-15-spacing.gba  gba-rt-20-spacing.gba  gba-rt-5-spacing.gba
src/: bitmap_loader.rs  camera.rs  color.rs  get_render_config.rs  hittable.rs  images.rs  main.rs  material.rs  music.rs  nescentricities.rs  rand.rs  ray.rs  text.rs  trig_num.rs  utils.rs  vars.rs  vec3.rs  vecmath.rs
src/hittables/: sphere.rs
src/math/: mod.rs  ray.rs  types.rs  vec2.rs  vec3.rs
src/math/fixed32/: add.rs  anglemath.rs  debug.rs  div.rs  invsqrt.rs  mod.rs  mul.rs  neg.rs  ord.rs  predefines.rs  rand.rs  reciprocal.rs  shift.rs  sqrt.rs  sqrtlut.rs  sub.rs
src/mats/: debug_front.rs  dielectric.rs  diffuse_light.rs  lambertian.rs  metal.rs  mod.rs
src/resources/: images.rs  mod.rs  nescentricities.rs  pixelara.rs  text.rs
src/tracer/: denoise.rs  interval.rs  mod.rs  raycolor.rs  scene.rs  sphere.rs
src/tracer/material/: dielectric.rs  lambertian.rs  metal.rs  mod.rs
src/tracer/objects/: mod.rs  sphere.rs
