cargo-features = ["profile-rustflags"]

[package]
name = "gba-rt"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.21.1"

[profile.dev]
opt-level = 3
#panic = "abort"
lto = "fat"
incremental = true

[profile.dev.package."*"]
opt-level = 3
incremental = true

[profile.release]
strip = "symbols"
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "fat"
incremental = true
rustflags = ["-Z", "location-detail=none"]

[profile.release.package."*"]
strip = "symbols"
opt-level = 3
codegen-units = 1
incremental = true
rustflags = ["-Z", "location-detail=none"]
