cargo-features = ["profile-rustflags"]

[package]
name = "gba-rt"
version = "0.1.0"
authors = [""]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = "0.21.1"
arrayvec = { version = "0.7.6", default-features = false }
bytemuck = "1.21.0"
#const-random = "0.1.18"

[profile.dev]
opt-level = 3
#panic = "abort"
lto = "fat"
incremental = true

[profile.dev.package."*"]
opt-level = 3
incremental = true

[profile.release]
#strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 4
incremental = true
rustflags = ["-Clink-args=-Map=map.map"]

[profile.release.package."*"]
#strip = "symbols"
opt-level = 3
codegen-units = 4
incremental = true
rustflags = []
